<resources>
    <string name="app_name">IPurse</string>
    <string name="wallets">Wallets</string>
    <string name="contributions">Вклады</string>
    <string name="income">Incomes</string>
    <string name="losses">Expenses</string>
    <string name="currency_converter">Currency converter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_text">Some text</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="missing_title_warning">Missing title</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="registration_of_new_account">Registration of new account:</string>
    <string name="valid_email">Enter a valid email address</string>
    <string name="transfer">Transfer</string>
    <string name="history">History</string>
    <string name="title_activity_maps">Map</string>
    <string name="expenses">Expenses</string>
    <string name="atms_nearby">ATMs nearby</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="error_message">ERROR</string>
    <string name="enter_your_email">You should enter your email</string>
    <string name="new_password">The new password will be send on your email</string>
    <string name="user_not_found">Such user not found</string>
    <string name="new_password_will_be_send">The new password will be send on your email</string>
    <string name="wrong_user_or_pass">User not found or wrong password</string>
    <string name="registered_email">Such email has already registered</string>
    <string name="user_was_created">New user was created</string>
    <string name="password_changed">Password changed</string>
    <string name="not_match">Passwords do not match</string>
    <string name="success">SUCCESS</string>
    <string name="not_enough_money">Not enough money!</string>
    <string name="create_one_wallet">Should create at least one wallet</string>
    <string name="deleting">Deleting</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="sum">Sum:</string>
    <string name="currency">Currency:</string>
    <string name="description">Description:</string>
    <string name="date_of_crration">Date of creation:</string>
    <string name="interval_oper">Interval of operation:</string>
    <string name="wallet_name">Wallet name:</string>
    <string name="last_date">Last expense date:</string>
    <string name="expense_name">Expense name</string>
    <string name="interval">Interval</string>
    <string name="missing_name">Missing name</string>
    <string name="missong_sum">Missing sum</string>
    <string name="not_negative">Sum can\'t be negative</string>
    <string name="not_number">Not number</string>
    <string name="mis_interval">Missing interval</string>
    <string name="too_small_interv">Too small interval</string>
</resources>
