<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/wallets"
        android:title="@string/wallets"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        />

    <item
        android:id="@+id/expenses"
        android:title="@string/expenses"
        android:icon="@drawable/ic_trending_down_black_24dp"
        />

    <item
        android:id="@+id/transfer"
        android:title="@string/transfer"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        />

    <item
        android:id="@+id/currency_converter"
        android:title="@string/currency_converter"
        android:icon="@drawable/ic_compare_arrows_black_24dp"

        />

    <item
        android:id="@+id/nearby"
        android:title="@string/income"
        android:icon="@drawable/ic_my_location_black_24dp"
        />

</menu>